# src/entities/feedback/api.ts
@@ -1,0 +1,6 @@
+import { axiosInstance } from "@/shared/api/axiosInstance"
+import { Feedback } from "@/shared/types/feedback"
+
+export const sendFeedback = (feedback: Feedback) => {
+  return axiosInstance.post('/feedback', feedback)
+}
