# src/entities/user/api.ts
@@ -1,21 +1,21 @@
 import { axiosInstance } from "@/shared/api/axiosInstance"
 import { RegisterUserFields, UserData } from "@/shared/types/user"
-import { AxiosResponse } from "axios";
 
 export const registerUser = (params: RegisterUserFields) => {
-  return axiosInstance.post('/auth/register', { params });
+  return axiosInstance.post('/auth/register', params);
 }
 
 export const loginUser = (params: RegisterUserFields) => {
-  return axiosInstance.post('/auth/login', { params });
+  console.log(params);
+  return axiosInstance.post('/auth/login', params);
 }
 
 export const getUserData = () => {
-  return axiosInstance.get<AxiosResponse<UserData>>('/auth/me')
+  return axiosInstance.get<UserData>('/users/me')
 }
 
 export const updateUserData = (params: RegisterUserFields) => {
-  return axiosInstance.put<AxiosResponse<UserData>>('/user/me', { params });
+  return axiosInstance.put<UserData>('/users/me', { params });
 }
 
 export const deleteUser = () => {
