# src/shared/types/feedback.ts
@@ -1,0 +1,4 @@
+export type Feedback = {
+  rate: number,
+  comment?: string,
+};
